--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ future==0.17.1
 gunicorn==20.0.4
 isort==4.3.18
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==3.0.1
 lazy-object-proxy==1.4.0
 Mako==1.1.2
 MarkupSafe==1.1.1
@@ -33,6 +33,7 @@ python-jose-cryptodome==1.3.2
 pytz==2019.1
 six==1.12.0
 SQLAlchemy==1.3.3
+typed-ast==1.4.2
 Werkzeug==0.15.3
 wrapt==1.11.1
 WTForms==2.3.1
