--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,40 @@
-alembic==1.4.2
+alembic==1.6.5
 aniso8601==6.0.0
 astroid==2.2.5
 autopep8==1.5.2
 Babel==2.8.0
-Click==7.0
+Click==8.0.1
 ecdsa==0.13.3
-Flask==1.0.2
-Flask-Cors==3.0.8
+Flask==1.1.2
+Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
 Flask-Moment==0.9.0
 Flask-RESTful==0.3.7
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 future==0.17.1
-gunicorn==20.0.4
+greenlet==1.1.0
+gunicorn==20.1.0
 isort==4.3.18
-itsdangerous==1.1.0
+itsdangerous==2.0.1
 Jinja2==3.0.1
 lazy-object-proxy==1.4.0
-Mako==1.1.2
-MarkupSafe==1.1.1
+Mako==1.1.4
+MarkupSafe==2.0.1
 mccabe==0.6.1
 psycopg2==2.8.5
 psycopg2-binary==2.9.1
 pycodestyle==2.6.0
 pycryptodome==3.3.1
 pylint==2.3.1
-python-dateutil==2.6.0
+python-dateutil==2.8.1
 python-editor==1.0.4
 python-jose-cryptodome==1.3.2
 pytz==2019.1
-six==1.12.0
-SQLAlchemy==1.3.3
+six==1.16.0
+SQLAlchemy==1.4.18
 typed-ast==1.4.2
-Werkzeug==0.15.3
+Werkzeug==2.0.1
 wrapt==1.11.1
 WTForms==2.3.1
