--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,29 @@
-alembic==1.6.5
-aniso8601==6.0.0
-astroid==2.2.5
-autopep8==1.5.2
-Babel==2.8.0
-Click==8.0.1
-ecdsa==0.13.3
-Flask==1.1.2
+alembic==1.8.0
+cffi==1.15.1
+click==8.1.3
+colorama==0.4.5
+cryptography==37.0.2
+ecdsa==0.17.0
+Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
-Flask-Moment==0.9.0
-Flask-RESTful==0.3.7
-Flask-Script==2.0.6
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
-future==0.17.1
-greenlet==1.1.0
+greenlet==1.1.2
 gunicorn==20.1.0
-isort==4.3.18
-itsdangerous==2.0.1
-Jinja2==3.0.1
-lazy-object-proxy==1.4.0
-Mako==1.1.4
-MarkupSafe==2.0.1
-mccabe==0.6.1
-psycopg2==2.8.5
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jose==1.0.0
+jwt==1.3.1
+Mako==1.2.1
+MarkupSafe==2.1.1
+psycopg2==2.9.3
 psycopg2-binary==2.9.1
-pycodestyle==2.6.0
-pycryptodome==3.3.1
-pylint==2.3.1
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-jose-cryptodome==1.3.2
-pytz==2019.1
+pyasn1==0.4.8
+pycparser==2.21
+PyJWT==2.4.0
+python-jose==3.3.0
+rsa==4.8
 six==1.16.0
-SQLAlchemy==1.4.18
-Werkzeug==2.0.1
-wrapt==1.11.1
-WTForms==2.3.1
+SQLAlchemy==1.4.39
+Werkzeug==2.1.2
