--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ ecdsa==0.17.0
 Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
+Flask-Moment==0.9.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
