--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,27 @@
-alembic==1.8.0
-cffi==1.15.1
-click==8.1.3
-colorama==0.4.5
-cryptography==37.0.2
+alembic==1.7.5
+click==7.1.2
+colorama==0.4.4
 ecdsa==0.17.0
-Flask==2.1.2
+Flask==1.1.2
 Flask-Cors==3.0.10
-Flask-Migrate==2.7.0
-Flask-Moment==0.9.0
-Flask-Script==2.0.5
+Flask-Migrate==1.8.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jose==1.0.0
-jwt==1.3.1
-Mako==1.2.1
-MarkupSafe==2.1.1
-psycopg2==2.9.3
-psycopg2-binary==2.9.1
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+Mako==1.1.6
+MarkupSafe==2.0.1
+psycopg2-binary==2.9.2
 pyasn1==0.4.8
-pycparser==2.21
-PyJWT==2.4.0
+pycodestyle==2.8.0
 python-jose==3.3.0
 rsa==4.8
 six==1.16.0
-SQLAlchemy==1.4.39
-Werkzeug==2.1.2
+SQLAlchemy==1.4.28
+typing-extensions==4.0.1
+Werkzeug==1.0.1
+zipp==3.6.0
