--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,38 @@
-alembic==1.7.5
-click==7.1.2
-colorama==0.4.4
-ecdsa==0.17.0
-Flask==1.1.2
-Flask-Cors==3.0.10
-Flask-Migrate==1.8.0
+alembic==1.4.2
+aniso8601==6.0.0
+astroid==2.2.5
+autopep8==1.5.2
+Babel==2.8.0
+Click==7.0
+ecdsa==0.13.3
+Flask==1.0.2
+Flask-Cors==3.0.8
+Flask-Migrate==2.5.3
+Flask-Moment==0.9.0
+Flask-RESTful==0.3.7
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-gunicorn==20.1.0
-importlib-metadata==4.8.2
-importlib-resources==5.4.0
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.3
+future==0.17.1
+gunicorn==20.0.4
+isort==4.3.18
 itsdangerous==1.1.0
-Jinja2==2.11.3
-Mako==1.1.6
-MarkupSafe==2.0.1
-psycopg2-binary==2.9.2
-pyasn1==0.4.8
-pycodestyle==2.8.0
+Jinja2==2.10.1
+lazy-object-proxy==1.4.0
+Mako==1.1.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+psycopg2==2.8.5
+psycopg2-binary==2.8.2
+pycodestyle==2.6.0
+pylint==2.3.1
+python-dateutil==2.6.0
+python-editor==1.0.4
 python-jose==3.3.0
-rsa==4.8
-six==1.16.0
-SQLAlchemy==1.4.28
-typing-extensions==4.0.1
-Werkzeug==1.0.1
-zipp==3.6.0
+pytz==2019.1
+six==1.12.0
+SQLAlchemy==1.3.3
+typed-ast==1.3.5
+Werkzeug==0.15.3
+wrapt==1.11.1
+WTForms==2.3.1
